# game_data_tools

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: docs.yml  tests.yml
scripts/: make_coverage_badge.py
src/game_data_tools/: __init__.py  cli.py  config.py  pointer.py  project.py  schema.py  unreal_sync.py  workbook.py  worksheet.py
src/game_data_tools/engine/: __init__.py  adapter.py  convert.py  unreal_adapter.py
tests/: _fake_engine.py  test_batched_open.py  test_cli.py  test_fixture_project.py  test_roundtrip.py  test_schema_validation.py  test_smoke.py  test_unreal_config.py  test_unreal_sync.py
tests/fixtures/data/: diff_seed.xlsx
tests/fixtures/project/: config.json
tests/fixtures/project/json/: Character.json  Items_Accessory.json  Items_Armour.json  Items_Weapon.json  PostProcess_DropNull.json  PostProcess_EmptyValue.json  PostProcess_OmitNull.json  TestData_Array.json  TestData_Column.json  TestData_Csv.csv  TestData_Object.json  TestData_Tsv.tsv
tests/fixtures/project/localization/: Character_eng.json  TestData_Csv_eng.json  TestData_Tsv_eng.json
tests/fixtures/project/xlsx/: PostProcess.xlsx  TestData.xlsx
tests/fixtures/project/xlsx/Folder/: Character.xlsx
tutorial/: README.md
tutorial/sample_project/: config.json
tutorial/sample_project/json/: Items_Consumable.json  Items_Equipment.json
tutorial/sample_project/xlsx/: Items.xlsx
tutorial/scripts/: 01_convert.ps1  01_convert.sh  02_to_xlsx.ps1  02_to_xlsx.sh  03_roundtrip.ps1  03_roundtrip.sh
