[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "game_data_tools"
version = "0.0.1"
description = "Convert spreadsheet game data between .xlsx and .json, with localization and schema validation."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Yonghee Kim", email = "masterplanf@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1",
    "jsonschema>=4.0",
    "jsonpointer>=3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
]

[project.scripts]
gdt = "game_data_tools.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/game_data_tools"]

[tool.ruff]
line-length = 100
target-version = "py310"
