[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "game_data_tools"
version = "0.0.1"
description = "Convert spreadsheet game data between .xlsx and .json, with localization and schema validation."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Yonghee Kim", email = "masterplanf@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1",
    "jsonschema>=4.0",
    "jsonpointer>=3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "coverage>=7.0",
    "pydoctor>=24.0",
]

[project.scripts]
gdt = "game_data_tools.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/game_data_tools"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.coverage.run]
source = ["game_data_tools"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "^\\s*\\.\\.\\.$",
]

[tool.pydoctor]
project-name = "game_data_tools"
project-url = "https://github.com/YongHee-Kim/game_data_tools"
docformat = "restructuredtext"
theme = "readthedocs"
make-html = true
html-output = "build/apidocs"
privacy = [
    "HIDDEN:**.tests",
    "HIDDEN:**.tests.*",
]
intersphinx = ["https://docs.python.org/3/objects.inv"]
